--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-* {
+* 
+{
+    font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Times New Roman', Times, serif;
+body 
+{
     padding: 10px;
 }
 
