--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * 
 {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
@@ -28,6 +28,7 @@ header h1 {
 
 /* style the nav links */
 nav a {
+    font-family: 'Smooch Sans', sans-serif;
     float: center;
     color: black;
     text-align: center;
