--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ header h1 {
     font-size: 50px;
 }
 
+/*Quiz CSS*/
+.bigsec {margin: 20px 5px;}
+.sections {font-weight: bold; font-size: 25px;}
+#namesec {column-count: 2;}
+.quiz {text-align: center; border: 2px solid black; box-shadow: 5px 5px; border-radius: 20px; margin: 50px 20px;}
+.shortq {text-align: center;}
+.mq {text-align: center;} 
+.disp {column-count: 2; text-align: left;}
+#finbutt {text-align: center; font-size:21px;}
+
 /* style the top navigation bar */
 /* nav {
     overflow: hidden;
