--- a/styles/style.css
+++ b/styles/style.css
@@ -310,10 +310,10 @@ article
 }
 
 /*Quiz CSS*/
-#idsec {columns: 2; text-align: center;}
+#idsec {text-align: center;}
 #q2 {word-spacing: 50px;}
 #q3d {columns: 2; text-align: center;}
-#q5d {columns: 2; text-align: center;}
+#q5d {text-align: center;}
 .q5 {
 	display: flex; 
 	align-items: center; 
