--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body {
       line-height: 1;
       margin: 0;
       min-height: 100vh;
-      margin-top: 40px;
+      /* margin-top: 40px; */
       margin-bottom: 40px;
       width: 100%;
       background: rgb(231,215,251);
