--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,20 +1,21 @@
 /* responsive.css */
 @media screen and (max-width:1000px) {
+
       /* ########## Index Html ########## */
       #index_body {
             width: 100%;
       }
-      
+
       #index_img {
             width: 100%;
       }
 
       /* ########## Topic Html ########## */
-      
+
       #growth figure {
             float: none;
       }
-      
+
       #r_img {
             width: 60%;
       }
@@ -22,105 +23,112 @@
 
 @media screen and (max-width: 960px) {
       .navbar__container {
-        display: flex;
-        justify-content: space-between;
-        height: 80px;
-        z-index: 1;
-        width: 100%;
-        max-width: 1300px;
-        padding: 0;
+            display: flex;
+            justify-content: space-between;
+            height: 80px;
+            z-index: 1;
+            width: 100%;
+            max-width: 1300px;
+            padding: 0;
       }
-    
+
       .navbar__menu {
-        display: grid;
-        grid-template-columns: auto;
-        margin: 0;
-        width: 100%;
-        position: absolute;
-        top: -1000px;
-        opacity: 1;
-        transition: all 0.5s ease;
-        height: 50vh;
-        z-index: -1;
+            display: grid;
+            grid-template-columns: auto;
+            margin: 0;
+            width: 100%;
+            position: absolute;
+            top: -1000px;
+            opacity: 1;
+            transition: all 0.5s ease;
+            height: 50vh;
+            z-index: -1;
       }
-    
+
       .navbar__menu.active {
-        background: #131313;
-        top: 100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 99;
-        height: 50vh;
-        font-size: 1.6rem;
+            background: #131313;
+            top: 100%;
+            opacity: 1;
+            transition: all 0.5s ease;
+            z-index: 99;
+            height: 50vh;
+            font-size: 1.6rem;
       }
-    
+
       #navbar__logo {
-        padding-left: 25px;
-        padding-top: 25px;
+            padding-left: 25px;
+            padding-top: 25px;
       }
-    
+
       .navbar__toggle .bar {
-        width: 25px;
-        height: 3px;
-        margin: 5px auto;
-        transition: all 0.3s ease-in-out;
-        background: rgb(46, 46, 46);
+            width: 25px;
+            height: 3px;
+            margin: 5px auto;
+            transition: all 0.3s ease-in-out;
+            background: rgb(46, 46, 46);
       }
-    
+
       .navbar__item {
-        width: 100%;
+            width: 100%;
       }
-    
+
       .navbar__links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
+            text-align: center;
+            padding: 2rem;
+            width: 100%;
+            display: table;
       }
-    
+
       #mobile-menu {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
+            position: absolute;
+            top: 20%;
+            right: 5%;
+            transform: translate(5%, 20%);
       }
-    
+
       .navbar__toggle .bar {
-        display: block;
-        cursor: pointer;
+            display: block;
+            cursor: pointer;
       }
-    
+
       #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
+            opacity: 0;
       }
-    
+
       #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
+            transform: translateY(8px) rotate(45deg);
       }
-    
+
       #mobile-menu.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
+            transform: translateY(-8px) rotate(-45deg);
       }
 
       /* ########## Quiz Html ########## */
-      .q2, .q3 {
+      .quiz_nav a {
+            display: block;
+            padding: 1px;
+      }
+      
+      .q2,
+      .q3 {
             display: block;
             text-align: left;
       }
-           
+
 }
 
 @media screen and (max-width:600px) {
+
       /* ########## Navigation Bar ########## */
       #navbar__logo {
             font-size: 1.5rem;
-          }
-        
+      }
+
       /* ########## Topic Html ########## */
       .topic_body {
             margin-bottom: 80px;
       }
-      
+
       aside {
             width: 100%;
             float: none;
