--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,11 +79,13 @@ figure {
       margin: 0.5em;
       padding: 0.5em;
       display: table;
+      /* aligns the caption and image together */
 }
 
 figcaption {
       display: table-caption;
       caption-side: bottom;
+      /* positions the caption on the bottom */
 }
 
 figcaption a {
@@ -129,6 +131,7 @@ figcaption a {
       -moz-background-clip: text;
       -webkit-text-fill-color: transparent;
       -moz-text-fill-color: transparent;
+      /* creates a linear gradient color for the text */
       cursor: pointer;
       font-size: 2rem;
       padding-top: 40px;
@@ -220,6 +223,7 @@ footer article {
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
+      /* background graphic for the page which is not scrollable and covers the whole page */
 }
 
 .index_container {
@@ -398,8 +402,7 @@ dl>dt {
 }
 
 #r_img {
-      width: 40%;
-      height: auto;
+      width: 200%;
 }
 
 /* References */
